[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Ben Hill <benjamin.hill28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
autopep8 = "^1.6.0"
django-environ = "^0.8.1"
djangorestframework = "^3.12.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
